tests/baselines/reference/typeArgumentInferenceWithConstraints.errors.txt
typeArgumentInferenceWithConstraints.ts(11,17): error TS2344: Type '{}' does not satisfy the constraint 'number'.
typeArgumentInferenceWithConstraints.ts(16,23): error TS2344: Type 'number' does not satisfy the constraint 'string'.
typeArgumentInferenceWithConstraints.ts(17,23): error TS2344: Type '{}' does not satisfy the constraint 'number'.
typeArgumentInferenceWithConstraints.ts(33,21): error TS2322: Type 'string' is not assignable to type 'Window'.
typeArgumentInferenceWithConstraints.ts(35,15): error TS2344: Type 'number' does not satisfy the constraint 'Window'.
typeArgumentInferenceWithConstraints.ts(41,35): error TS2345: Argument of type '(x: string) => string' is not assignable to parameter of type '(x: number) => void'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'number' is not assignable to type 'string'.
typeArgumentInferenceWithConstraints.ts(48,35): error TS2345: Argument of type '(x: string) => string' is not assignable to parameter of type '(x: number) => void'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'number' is not assignable to type 'string'.
typeArgumentInferenceWithConstraints.ts(49,15): error TS2344: Type 'string' does not satisfy the constraint 'number'.
typeArgumentInferenceWithConstraints.ts(55,41): error TS2345: Argument of type '(n: string) => string' is not assignable to parameter of type '(b: number) => number'.
  Types of parameters 'n' and 'b' are incompatible.
    Type 'number' is not assignable to type 'string'.
typeArgumentInferenceWithConstraints.ts(66,31): error TS2345: Argument of type '<A, B extends string, C>(a: (a: A) => A, b: (b: B) => B, c: (c: C) => C) => void' is not assignable to parameter of type 'string'.
typeArgumentInferenceWithConstraints.ts(67,1): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
typeArgumentInferenceWithConstraints.ts(73,29): error TS2345: Argument of type '0' is not assignable to parameter of type '""'.
typeArgumentInferenceWithConstraints.ts(74,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a9a' must be of type 'string', but here has type '{}'.
typeArgumentInferenceWithConstraints.ts(88,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'a9e' must be of type '{ x: number; z: Window & typeof globalThis; y?: undefined; } | { x: number; y: string; z?: undefined; }', but here has type '{}'.
typeArgumentInferenceWithConstraints.ts(89,70): error TS2353: Object literal may only specify known properties, and 'y' does not exist in type 'A92'.


==== typeArgumentInferenceWithConstraints.ts (15 errors) ====
    // Generic call with no parameters
    function noParams<T extends {}>() { }
    noParams();
    noParams<string>();
    noParams<{}>();
    
    // Generic call with parameters but none use type parameter type
    function noGenericParams<T extends number>(n: string) { }
    noGenericParams(''); // Valid
    noGenericParams<number>('');
    noGenericParams<{}>(''); // Error
                    ~~
!!! error TS2344: Type '{}' does not satisfy the constraint 'number'.
    
    // Generic call with multiple type parameters and only one used in parameter type annotation
    function someGenerics1<T, U extends T>(n: T, m: number) { }
    someGenerics1(3, 4); // Valid
    someGenerics1<string, number>(3, 4); // Error
                          ~~~~~~
!!! error TS2344: Type 'number' does not satisfy the constraint 'string'.
    someGenerics1<number, {}>(3, 4); // Error
                          ~~
!!! error TS2344: Type '{}' does not satisfy the constraint 'number'.
    someGenerics1<number, number>(3, 4);
    
    // Generic call with argument of function type whose parameter is of type parameter type
    function someGenerics2a<T extends string>(n: (x: T) => void) { }
    someGenerics2a((n: string) => n);
    someGenerics2a<string>((n: string) => n);
    someGenerics2a<string>((n) => n.substr(0));
    
    function someGenerics2b<T extends string, U extends number>(n: (x: T, y: U) => void) { }
    someGenerics2b((n: string, x: number) => n);
    someGenerics2b<string, number>((n: string, t: number) => n);
    someGenerics2b<string, number>((n, t) => n.substr(t * t));
    
    // Generic call with argument of function type whose parameter is not of type parameter type but body/return type uses type parameter
    function someGenerics3<T extends Window>(producer: () => T) { }
    someGenerics3(() => ''); // Error
                        ~~
!!! error TS2322: Type 'string' is not assignable to type 'Window'.
!!! related TS6502 typeArgumentInferenceWithConstraints.ts:32:52: The expected type comes from the return type of this signature.
    someGenerics3<Window>(() => undefined);
    someGenerics3<number>(() => 3); // Error
                  ~~~~~~
!!! error TS2344: Type 'number' does not satisfy the constraint 'Window'.
    
    // 2 parameter generic call with argument 1 of type parameter type and argument 2 of function type whose parameter is of type parameter type
    function someGenerics4<T, U extends number>(n: T, f: (x: U) => void) { }
    someGenerics4(4, () => null); // Valid
    someGenerics4<string, number>('', () => 3);
    someGenerics4<string, number>('', (x: string) => ''); // Error
                                      ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: string) => string' is not assignable to parameter of type '(x: number) => void'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type 'number' is not assignable to type 'string'.
    someGenerics4<string, number>(null, null);
    
    // 2 parameter generic call with argument 2 of type parameter type and argument 1 of function type whose parameter is of type parameter type
    function someGenerics5<U extends number, T>(n: T, f: (x: U) => void) { }
    someGenerics5(4, () => null); // Valid
    someGenerics5<number, string>('', () => 3);
    someGenerics5<number, string>('', (x: string) => ''); // Error
                                      ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: string) => string' is not assignable to parameter of type '(x: number) => void'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type 'number' is not assignable to type 'string'.
    someGenerics5<string, number>(null, null); // Error
                  ~~~~~~
!!! error TS2344: Type 'string' does not satisfy the constraint 'number'.
    
    // Generic call with multiple arguments of function types that each have parameters of the same generic type
    function someGenerics6<A extends number>(a: (a: A) => A, b: (b: A) => A, c: (c: A) => A) { }
    someGenerics6(n => n, n => n, n => n); // Valid
    someGenerics6<number>(n => n, n => n, n => n);
    someGenerics6<number>((n: number) => n, (n: string) => n, (n: number) => n); // Error
                                            ~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(n: string) => string' is not assignable to parameter of type '(b: number) => number'.
!!! error TS2345:   Types of parameters 'n' and 'b' are incompatible.
!!! error TS2345:     Type 'number' is not assignable to type 'string'.
    someGenerics6<number>((n: number) => n, (n: number) => n, (n: number) => n);
    
    // Generic call with multiple arguments of function types that each have parameters of different generic type
    function someGenerics7<A, B extends string, C>(a: (a: A) => A, b: (b: B) => B, c: (c: C) => C) { }
    someGenerics7(n => n, n => n, n => n); // Valid, types of n are <any, string, any> respectively
    someGenerics7<number, string, number>(n => n, n => n, n => n);
    someGenerics7<number, string, number>((n: number) => n, (n: string) => n, (n: number) => n);
    
    // Generic call with argument of generic function type
    function someGenerics8<T extends string>(n: T): T { return n; }
    var x = someGenerics8<string>(someGenerics7); // Error
                                  ~~~~~~~~~~~~~
!!! error TS2345: Argument of type '<A, B extends string, C>(a: (a: A) => A, b: (b: B) => B, c: (c: C) => C) => void' is not assignable to parameter of type 'string'.
    x<string, string, string>(null, null, null); // Error
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'String' has no call signatures.
    
    // Generic call with multiple parameters of generic type passed arguments with no best common type
    function someGenerics9<T extends any>(a: T, b: T, c: T): T {
        return null;
    }
    var a9a = someGenerics9('', 0, []);
                                ~
!!! error TS2345: Argument of type '0' is not assignable to parameter of type '""'.
    var a9a: {};
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a9a' must be of type 'string', but here has type '{}'.
!!! related TS6203 typeArgumentInferenceWithConstraints.ts:73:5: 'a9a' was also declared here.
    var a9b = someGenerics9<{ a?: number; b?: string; }>({ a: 0 }, { b: '' }, null);
    var a9b: { a?: number; b?: string; };
    
    // Generic call with multiple parameters of generic type passed arguments with multiple best common types
    interface A91 {
        x: number;
        y?: string;
    }
    interface A92 {
        x: number;
        z?: Window;
    }
    var a9e = someGenerics9(undefined, { x: 6, z: window }, { x: 6, y: '' });
    var a9e: {};
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'a9e' must be of type '{ x: number; z: Window & typeof globalThis; y?: undefined; } | { x: number; y: string; z?: undefined; }', but here has type '{}'.
!!! related TS6203 typeArgumentInferenceWithConstraints.ts:87:5: 'a9e' was also declared here.
    var a9f = someGenerics9<A92>(undefined, { x: 6, z: window }, { x: 6, y: '' });
                                                                         ~
!!! error TS2353: Object literal may only specify known properties, and 'y' does not exist in type 'A92'.
    var a9f: A92;
    
    // Generic call with multiple parameters of generic type passed arguments with a single best common type
    var a9d = someGenerics9({ x: 3 }, { x: 6 }, { x: 6 });
    var a9d: { x: number; };
    
    // Generic call with multiple parameters of generic type where one argument is of type 'any'
    var anyVar: any;
    var a = someGenerics9(7, anyVar, 4);
    var a: any;
    
    // Generic call with multiple parameters of generic type where one argument is [] and the other is not 'any'
    var arr = someGenerics9([], null, undefined);
    var arr: any[];
    
    